[tool.poetry]
name = "timers"
version = "0.1.0"
description = "Time activities."
authors = ["Povilas Balciunas <balciunas90@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-vlc = "^3.0.18122"
textual = "^0.37.1"
pydantic = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
