[project]
name = "timers"
version = "0.1.0"
description = "Time activities."
authors = [
    { name = "Povilas Balciunas", email = "balciunas90@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual==0.37.1",
    "pydantic>=2.3.0",
    "wakepy>=0.7.1",
    "playsound>=1.3.0",
    "pyobjc>=11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
